# GangZiTerminal

./: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_io.rs  chat_attachments.rs  db.rs  identity.md  learning.rs  main.rs  memory.rs  models.rs  news.rs  prompt.rs  risk.rs  scheduler.rs  security.rs  trade.rs
src-tauri/src/adapters/: account_commands.rs  agent_commands.rs  app_commands.rs  app_state_commands.rs  chat_commands.rs  episode_commands.rs  expectation_commands.rs  market_commands.rs  mod.rs  news_commands.rs  news_high_importance_listener.rs  principle_commands.rs  proxy_commands.rs  quotes_commands.rs  reflection_scheduler.rs  scan_scheduler.rs  thesis_commands.rs
src-tauri/src/adapters/agent_tools/: account.rs  compact.rs  delegate.rs  expectations.rs  memory.rs  mod.rs  news.rs  positions.rs  principles.rs  quotes.rs  research.rs  theses.rs  visual.rs
src-tauri/src/agent/: compact.rs  config.rs  context.rs  loop_.rs  mod.rs  observer.rs  types.rs
src-tauri/src/article/: cleanup.rs  metadata.rs  mod.rs  model.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/infrastructure/: logging.rs  mod.rs  scheduler_heartbeat.rs
src-tauri/src/pipeline/: briefing.rs  chat.rs  chat_attachments.rs  context.rs  events.rs  history.rs  kline_warm.rs  market_refresh.rs  market_universe.rs  memory.rs  mod.rs  quotes_fetch.rs  refresh.rs  review.rs  runner.rs  scheduler.rs  stocks.rs  util.rs
(+238 files in other folders)
