[package]
name = "gangzi-terminal"
version = "0.1.0"
description = "A macOS desktop app for learning A-share news analysis."
authors = ["local"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
rss = "2"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8"
scraper = "0.24"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["time", "sync", "macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
async-trait = "0.1"
futures-util = "0.3"
eventsource-stream = "0.2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1.10"
# 通达信 (TDX) 行情协议——内部实现在 infrastructure/quotes/tdx/
# 参考实现：https://github.com/mootdx/mootdx （Python 版 pytdx wire 兼容）
# Rust 端口参考：https://github.com/mootdx/mootdx-rust
byteorder = "1.5"
flate2 = "1.0"
# K 线渲染——为 analyze_chart 工具生成 PNG 给 LLM vision 看
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "line_series", "candlestick"] }
png = "0.17"
